# inspeere-docs

./: LICENCE.md  README.md
french-docs/: .readthedocs.yaml  Guides.rst  InstallGuide.rst  README.md  UsersGuide.rst  conf.py  index.rst  pyproject.toml  requirements.txt
french-docs/install-guide/: .Configuration.rst.swp  AgentdeSauvegarde.rst  Configuration.rst  IG_0_InstallGuide.rst  IG_1_MiseEnService.rst  IG_2_InterfaceGestionCentralisee.rst  IG_2_Interface_de_gestion.rst  IG_3_AgentdeSauvegarde.rst  IG_3_Supervision.rst  IG_4_Configuration.rst  IG_4_Sauvegardes.rst  IG_5_Restauration.rst  IG_5_Sauvegardes.rst  IG_6_Gestion_du_materiel.rst  IG_6_Interface_DatisAdmin.rst  IG_7_ResolutionProblemes.rst  IG_7_Serveur_de_Fichiers_Samba.rst  IG_8_ResolutionProblemes.rst  IG_8_Serveur_de_Fichiers_Samba.rst  InstallGuide.rst  MiseEnService.rst  ResolutionProblemes.rst
french-docs/install-guide/Figures_app_azure/: 19_Mail_Permissions
french-docs/tests/: test_french_docs.py
french-docs/user-guide/: EvalBesoins.rst  MiseEnService.rst  PremiersPas.rst  UsersGuide.rst
