[tool.poetry]
name = "french-docs"
version = "0.1.0"
description = ""
authors = ["Olivier Dalle <olivier@inspeere.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
